--- a/app/src/components/devjourney/directorymap/DirectoryMap.module.css
+++ b/app/src/components/devjourney/directorymap/DirectoryMap.module.css
@@ -12,7 +12,15 @@
 }
 
 .dirMapContainer li {
-    width: 100%;
+    width: 80%;
+    align-self: center;
+}
+
+@media (max-width: 768px) {
+    .dirMapContainer li {
+        width: 100%;
+    }
+
 }
 
 .dirMapContainer li button {
@@ -25,6 +33,8 @@
     border-radius: var(--border-radius-tiny);
     padding-left: 1em;
     color: color-mix(in srgb, var(--color), gray);
+    display: flex;
+    justify-content: flex-start;
 }
 
 .dirMapContainer li button:hover {
