--- a/app/src/components/hero/Hero.module.css
+++ b/app/src/components/hero/Hero.module.css
@@ -100,6 +100,10 @@
 }
 
 @media (max-width: 1024px) {
+    .hero {
+        padding: var(--padding-small);
+    }
+
     .branding {
         grid-template-columns: 1fr;
         text-align: center;
@@ -147,7 +151,7 @@
     }
 
     .image {
-        width: 80%;
+        width: 30%;
     }
 }
 
@@ -174,6 +178,6 @@
     }
 
     .image {
-        width: 90%;
+        width: 20%;
     }
 }
